# pnmutils

./: .gitignore  CMakeLists.txt  README.md  pnm.sln
Dependencies/freeglut/include/GL/: freeglut_std.h
Dependencies/freeglut/lib/: freeglut.exp  freeglut.lib  freeglut_static.lib  freeglut_staticd.lib  freeglutd.lib
pnm/: CMakeLists.txt  pnm.vcxproj  pnm.vcxproj.filters
pnm/include/: pnm.h  pnmloader.h  pnmutils.h
pnm/samples/: circle.ascii.pbm  feep.pgm  fool.ascii.pbm  lena.ppm
pnm/src/: main.cpp  pnm.cpp  pnmloader.cpp  pnmutils.cpp  test.cpp
