CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(pnmutils)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_DEBUG_POSTFIX "d")

OPTION(SHARED_LIB "Build pnm shared library." OFF)
OPTION(STATIC_LIB "Build pnm static library." ON)

#Bring the headers into the project
INCLUDE_DIRECTORIES(include)

#add source files to project
FILE(GLOB SOURCES src/*.cpp)

IF(SHARED_LIB)
	ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})
ENDIF()
IF(STATIC_LIB)
	ADD_LIBRARY(${PROJECT_NAME}_static STATIC ${SOURCES})
ENDIF()
