CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(pnmutils)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_DEBUG_POSTFIX "d")

OPTION(SHARED_LIB "Build pnm shared library." OFF)
OPTION(STATIC_LIB "Build pnm static library." ON)

#Bring the headers into the project
INCLUDE_DIRECTORIES(include)

#add source files to project
FILE(GLOB SOURCES src/*.cpp)

SET(CMAKE_PREFIX_PATH "C:/Program Files (x86)/freeglut" CACHE STRING "freeglut path")

# GLUT
FIND_PACKAGE(GLUT REQUIRED)
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
IF(NOT GLUT_FOUND)
	message(ERROR "GLUT not found!")
ENDIF(NOT GLUT_FOUND)

# OpenGL
FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(${OpenGL_INCLUDE_DIRS})
LINK_DIRECTORIES(${OpenGL_LIBRARY_DIRS})
ADD_DEFINITIONS(${OpenGL_DEFINITIONS})
IF(NOT OPENGL_FOUND)
	message(ERROR "OPENGL not found!")
ENDIF(NOT OPENGL_FOUND)

IF(SHARED_LIB)
	ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES})
ENDIF()
IF(STATIC_LIB)
	ADD_LIBRARY(${PROJECT_NAME}_static STATIC ${SOURCES})
	TARGET_LINK_LIBRARIES(${PROJECT_NAME}_static ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES})
ENDIF()
